--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,14 +10,17 @@
   <script type="text/javascript" src="lib/jasmine-2.0.3/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-2.0.3/jasmine-html.js"></script>
   <script type="text/javascript" src="lib/jasmine-2.0.3/boot.js"></script>
+  <script type="text/javascript" src="bower_components/jquery-2.1.0.min/index.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/Player.js"></script>
-  <script type="text/javascript" src="src/Song.js"></script>
+  <script type="text/javascript" src="src/demo.js"></script>
 
   <!-- include spec files here... -->
+  <!-- 
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
   <script type="text/javascript" src="spec/PlayerSpec.js"></script>
+  -->
+   <script type="text/javascript" src="spec/DemoSpec.js"></script>
 
 </head>
 
